_assets/css/styles.css
/* Arizonia: for logos and fancy text */
@font-face {
  font-family: 'Arizonia';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/arizonia-regular.woff2') format('woff2'),
       url('../fonts/arizonia-regular.woff')  format('woff');
}

/* Merriweather: serif, for plain readable text */
@font-face {
  font-family: 'Merriweather';
  font-style: normal;
  font-weight: 300;
  src: url('../fonts/merriweather-light.woff2') format('woff2'),
       url('../fonts/merriweather-light.woff')  format('woff');
}
@font-face {
  font-family: 'Merriweather';
  font-style: italic;
  font-weight: 300;
  src: url('../fonts/merriweather-light-italic.woff2') format('woff2'),
       url('../fonts/merriweather-light-italic.woff')  format('woff');
}
@font-face {
  font-family: 'Merriweather';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/merriweather-regular.woff2') format('woff2'),
       url('../fonts/merriweather-regular.woff')  format('woff');
}
@font-face {
  font-family: 'Merriweather';
  font-style: italic;
  font-weight: 400;
  src: url('../fonts/merriweather-italic.woff2') format('woff2'),
       url('../fonts/merriweather-italic.woff')  format('woff');
}
@font-face {
  font-family: 'Merriweather';
  font-style: normal;
  font-weight: 700;
  src: url('../fonts/merriweather-bold.woff2') format('woff2'),
       url('../fonts/merriweather-bold.woff')  format('woff');
}
@font-face {
  font-family: 'Merriweather';
  font-style: italic;
  font-weight: 700;
  src: url('../fonts/merriweather-bold-italic.woff2') format('woff2'),
       url('../fonts/merriweather-bold-italic.woff')  format('woff');
}

/* Source Sans: sans-serif, for titles and section headers */
@font-face {
  font-family: 'Source Sans';
  font-style: normal;
  font-weight: 300;
  src: url('../fonts/source-sans-light.woff2') format('woff2'),
       url('../fonts/source-sans-light.woff') format('woff');
}
@font-face {
  font-family: 'Source Sans';
  font-style: italic;
  font-weight: 300;
  src: url('../fonts/source-sans-light-italic.woff2') format('woff2'),
       url('../fonts/source-sans-light-italic.woff')  format('woff');
}
@font-face {
  font-family: 'Source Sans';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/source-sans-regular.woff2') format('woff2'),
       url('../fonts/source-sans-regular.woff') format('woff');
}
@font-face {
  font-family: 'Source Sans';
  font-style: italic;
  font-weight: 400;
  src: url('../fonts/source-sans-italic.woff2') format('woff2'),
       url('../fonts/source-sans-italic.woff')  format('woff');
}
@font-face {
  font-family: 'Source Sans';
  font-style: normal;
  font-weight: 700;
  src: url('../fonts/source-sans-bold.woff2') format('woff2'),
       url('../fonts/source-sans-bold.woff')  format('woff');
}
@font-face {
  font-family: 'Source Sans';
  font-style: italic;
  font-weight: 700;
  src: url('../fonts/source-sans-bold-italic.woff2') format('woff2'),
       url('../fonts/source-sans-bold-italic.woff')  format('woff');
}

/* Open Sans: sans-serif, more widely-kerned than Source Sans */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/open-sans-regular.woff2') format('woff2'),
       url('../fonts/open-sans-regular.woff') format('woff');
}
@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 400;
  src: url('../fonts/open-sans-italic.woff2') format('woff2'),
       url('../fonts/open-sans-italic.woff')  format('woff');
}
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 700;
  src: url('../fonts/open-sans-bold.woff2') format('woff2'),
       url('../fonts/open-sans-bold.woff')  format('woff');
}
@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 700;
  src: url('../fonts/open-sans-bold-italic.woff2') format('woff2'),
       url('../fonts/open-sans-bold-italic.woff')  format('woff');
}

/* Inconsolata: monospaced, for code blocks and syntax highlighting */
@font-face {
  font-family: 'Inconsolata';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/inconsolata.woff2') format('woff2'),
       url('../fonts/inconsolata.woff')  format('woff');
}
@font-face {
  font-family: 'Inconsolata';
  font-style: normal;
  font-weight: 700;
  src: url('../fonts/inconsolata-bold.woff2') format('woff2'),
       url('../fonts/inconsolata-bold.woff') format('woff');
}

/* logo: for top-level logo/branding on every page */
.logo {
  font-family: 'Arizonia', Helvetica, Arial, sans-serif;
  font-size: 36px;
  color: #7d1935;
}

/* html: for overall page formatting */
html {
  background: white;
  margin-top: 80px;
  margin-bottom: 80px;
}

/* body: for the actual text found in pages by default */
body {
  font-family: 'Source Sans', 'Open Sans', Helvetica, Arial, sans-serif;
  font-size: 14px;
  color: #444444;
  
  line-height: 1.5em;
  margin: auto;
  max-width: 64em;
  width: 100%;
}

/* footer: for the text shown at the bottom of the page */
footer {
  font-size: 12px;
  line-height: 1.25em;
  margin-top: -1em;
}

/* headings: for the section titles, page titles, etc. */
h1 {
  font-size: 160%;
}
h2 {
  font-size: 120%;
}
h3 {
  font-size: 100%;
}
h4 {
  font-size: 100%;
  font-style: bold;
  font-weight: 700;
  border: none;
}
h1, h2, h3 {
  font-style: bold;
  font-weight: 700;
  border: none;
  color: #00204e;
}

/* code: for in-line syntax highlighting and blocked code snippets */
code.language-plaintext {
  font-family: 'Inconsolata', monospace;
  font-size: 14px;
  padding: 0.2em;
  border-radius: 4px;
  color: #c7254e;
  background-color: #f7f7f7;
}
div.highlighter-rouge {
  font-family: 'Inconsolata', monospace;
  width: 100%;
  font-size: 14px;
  padding: 1em 1em 0.1em 1em;
  margin-bottom: 1.25em;
  border-radius: 4px;
  background-color: #f7f7f7;
}

/* table: for structured content that is organized into rows/columns */
table {
  border-collapse: separate;
  border-spacing: 1em 0;
  margin-bottom: 1.25em;
}
td {
  padding-right: 1em;
}

/* a: for links to other pages, websites, etc. */
a {
  color: #c7254e;
  text-decoration: none;
  border-bottom: none;
}
a:hover {
  color: #c7254e;
  text-decoration: underline;
}

/* img: for embedding images and image-like content */
img {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

/* sidebar: for navigating back to the home page */
@media (max-width: 64em) {
  #sidebar {
    background: none;
    border: none;
	  display: block;
  }
  #sidebar p {
    display: inline-block;
    padding-right: 1em;
  }
}
@media (min-width: 64em) {
  body {
    margin-top: 1em;
    display: grid;
    grid-gap: 0em;
    grid-template-columns: 7.5% 85.0% 7.5%;
  }
  #sidebar {
    padding-top: 3em;
  }
}

/* katex: for rendering equations dynamically on posts */
.katex {
  font-size: 1.1em !important;
}

